kubernetes/00_namespace.yml
# kubectl create namespace demo;
apiVersion: v1
kind: Namespace
metadata:
    name: demo
