kubernetes/01_deployment.yml
# PODs und Anzahl definieren
# kubectl apply -f 01_deployment.yml;
# kubectl get all
# kubectl describe pod microservice
# kubectl describe deployment microservice
apiVersion: apps/v1
kind: Deployment
metadata:
    name: microservice
    labels:
        app: microservice
spec:
    selector:
        matchLabels:
            app: microservice
    replicas: 1
    template:
        metadata:
            name: microservice
            labels:
                app: microservice
        spec:
            containers:
                -   name: microservice
                    image: 192.168.155.100:5000/microservice:latest
                    imagePullPolicy: Never
                    ports:
                        -   containerPort: 8080

#imagePullPolicy: IfNotPresent, Never
