kubernetes/01_pod_db.yml
# POD: Database
apiVersion: v1
kind: Pod
metadata:
    name: db
    labels:
        app: db
        env: test
spec:
    #securityContext:
    #    runAsUser: 1000
    #    fsGroup: 1000
    volumes:
        -   name: db-storage
            persistentVolumeClaim:
                claimName: pv-claim
    containers:
        -   name: db
            image: 192.168.155.100:5000/h2:latest
            imagePullPolicy: Never
            ports:
                -   containerPort: 9082
                    protocol: TCP
            resources:
                requests:
                    cpu: "10m"
                    memory: 64Mi
                limits:
                    cpu: 0.75
                    memory: 128Mi
            volumeMounts:
                -   mountPath: "/opt/h2/data"
                    name: db-storage
