kubernetes/02_deployment_microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: microservice
    labels:
        app: microservice
        env: test
spec:
    selector:
        matchLabels:
            app: microservice
            env: test
    replicas: 3
    minReadySeconds: 30
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            name: microservice
            labels:
                app: microservice
                env: test
        spec:
            containers:
                -   name: microservice
                    image: 192.168.155.100:5000/microservice:latest
                    imagePullPolicy: Never
                    ports:
                        -   containerPort: 8090
                            protocol: TCP
                    #envFrom:
                    #  - secretKeyRef:
                    #      name: db-secret
                    resources:
                        requests:
                            cpu: "10m"
                            memory: 64Mi
                        limits:
                            cpu: 0.75
                            memory: 256Mi
