kubernetes/10_pod_db.yml
# POD: Database
apiVersion: v1
kind: Pod
metadata:
    name: db
    labels:
        app: db
        env: test
spec:
    containers:
        -   name: db
            image: 192.168.155.100:5000/h2:latest
            imagePullPolicy: Never
            ports:
                -   name: db-tcp
                    containerPort: 9082
                    protocol: TCP
                -   name: db-web
                    containerPort: 8082
            resources:
                requests:
                    cpu: "10m"
                    memory: 64Mi
                limits:
                    cpu: 0.75
                    memory: 128Mi
            #volumeDevices:
            #    -   name: db-storage
            #        devicePath: /dev/block
            volumeMounts:
                -   name: db-storage
                    mountPath: "/opt/h2/data"
                    subPath: h2
                    readOnly: false
    volumes:
        -   name: db-storage
            #emptyDir: { } # Works
            #
            # The hostPath is created INSIDE the minikube VM !!!
            # minikube ssh;
            # ls -hal /tmp/kubernetes/db/h2/
            #hostPath:
            #    path: "/tmp/kubernetes/db"
            #    type: DirectoryOrCreate
            #
            persistentVolumeClaim:
                claimName: pv-claim
