kubernetes/50_backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    #namespace: demo
    labels:
        app: backend-deployment
    #    env: test
spec:
    selector:
        matchLabels:
            app: backend
            #env: test
    replicas: 3
    minReadySeconds: 30
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
    template:
        metadata:
            name: backend
            labels:
                app: backend
                #env: test
        spec:
            dnsPolicy: ClusterFirst
            containers:
                -   name: backend
                    image: 192.168.155.100:5000/backend:latest
                    imagePullPolicy: Never
                    #imagePullPolicy: IfNotPresent
                    ports:
                        -   containerPort: 8090
                            protocol: TCP
                    #envFrom:
                    #  - secretKeyRef:
                    #      name: db-secret
                    resources:
                        requests:
                            cpu: "10m"
                            memory: 64Mi
                        limits:
                            cpu: 0.75
                            memory: 256Mi
