kubernetes/02_service.yml
# Service: Zugriff von außen definieren mit dynamischer IP und Port
# kubectl apply -f service.yml;
# kubectl get service;
# kubectl describe service microservice;
# minikube service list; 
# minikube service microservice --url;
# for disk in {1..1000}; do curl $(minikube service microservice --url)/greet; echo ""; sleep 1; done;
# kubectl delete services microservice;
apiVersion: v1
kind: Service
metadata:
    name: microservice
    labels:
        app: microservice
spec:
    ports:
        -   name: http
            port: 8081
            targetPort: 8080
            nodePort: 30123
            protocol: TCP
    selector:
        app: microservice
    type: NodePort
    #type: LoadBalancer
#status:
#  loadBalancer: {}
