kubernetes/03_service_microservice.yml
# Service: External access.
# curl http://$(minikube ip):32123
# curl http://$(minikube service microservice --url)
apiVersion: v1
kind: Service
metadata:
    name: microservice
    labels:
        app: microservice
        env: test
spec:
    selector:
        app: microservice
        env: test
    ports:
        -   port: 8090
            targetPort: 8090
            nodePort: 32123
            protocol: TCP
    #type: NodePort
    type: LoadBalancer
