kubernetes/11_service_db.yml
# Internal Service for Database to access from the microservices.
apiVersion: v1
kind: Service
metadata:
    name: db
    labels:
        app: db
        env: test
spec:
    selector:
        app: db
        env: test
    ports:
        -   port: 9082
            targetPort: 9082
            #            nodePort: 31123
            protocol: TCP
    type: ClusterIP
