kubernetes/41_db_service.yml
# Internal Service for Database to access from the backend.
apiVersion: v1
kind: Service
metadata:
    name: db-service
    #namespace: demo
    labels:
        app: db-service
    #    env: test
spec:
    selector:
        app: db-pod
        #env: test
    ports:
        -   port: 9082
            targetPort: db-tcp
            # nodePort: 31123
            protocol: TCP
    type: ClusterIP
