kubernetes/51_backend_service.yml
# Service: External access by LoadBalancer.
# curl http://$(minikube ip):32123
# curl http://$(minikube service backend-service --url)
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    #namespace: demo
    labels:
        app: backend-service
    #    env: test
spec:
    selector:
        app: backend
        #env: test
    ports:
        -   port: 8090
            targetPort: 8090
            nodePort: 32123
            protocol: TCP
    type: LoadBalancer
