kubernetes/service.yml
# Service: Zugriff von außen definieren   
apiVersion: v1
kind: Service
metadata:
  name: microservice
  labels:
    run: microservice  
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    #nodePort: 8080
    name: http    
  selector:
    app: microservice
  #type: NodePort
  type: LoadBalancer
status:
  loadBalancer: {}
